my-app/src/components/Header/Header.scss
// this cause problem
.headerWrapper {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  transition: all 300ms;
}
.headerWrapperFixed {
  position: fixed;
  transition: all 300ms;
  top: 0;
  left: 0;
  width: 100vw;
  background-color: #ed174c;
}

.header {
  align-items: flex-end !important;
}

.nav-link {
  padding: 0px !important;
  margin-left: 40px;
  font-size: 18px;
  line-height: 22px;
}

